--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ layout: frontpage
 
 <div class="home">    
     
+    <div class="about">
+    <h1>{{ site.data.frontpage.about.title }}</h1>
+    <p>{{ site.data.frontpage.about.description }}</p>
+    <hr>
+    </div>
+
     {% include feature_list.html %}
 
     <hr>
