Add MRtrix3 publication citation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: frontpage
     <div class="about">
     <h1>{{ site.data.frontpage.about.title }}</h1>
     <p>{{ site.data.frontpage.about.description }}</p>
+    <p>{{ site.data.frontpage.about.citation }}</p>
     <hr>
     </div>
 
