Fix broken redirect using different approach

--- a/videos.html
+++ b/videos.html
@@ -1,5 +1,4 @@
 ---
-permalink: /videos
-redirect_to:
-- https://www.youtube.com/playlist?list=PLM-ZbrdPV5UotqdkNdP4wMBPwAj-lPgAD
+redirect: https://www.youtube.com/playlist?list=PLM-ZbrdPV5UotqdkNdP4wMBPwAj-lPgAD
+layout: redirect
 ---
