--- a/workshop.html
+++ b/workshop.html
@@ -1,5 +1,4 @@
 ---
-permalink: /workshop
-redirect_to:
-- https://www.inbrainlab.com/mrtrix3
+redirect: https://www.inbrainlab.com/mrtrix3
+layout: redirect
 ---
