--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: frontpage
     {% endfor %}
 
 
-    {% for post in site.posts limit:2, offset:1 %}
+    {% for post in site.posts limit:2 offset:1 %}
         {% include post_micro_snippet.html param=post %}  
     {% endfor %} 
     </div> 
