update workshop redirect to blog post

--- a/workshop.html
+++ b/workshop.html
@@ -1,4 +1,4 @@
 ---
-redirect: https://www.inbrainlab.com/mrtrix3
+redirect: https://www.mrtrix.org/2020/01/23/mrtrix3-workshop-to-be-held-in-sydney-australia-in-april-2020/
 layout: redirect
 ---
