--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: frontpage
 
     <hr>
 
+    <div style="background:#f0dfe7;">
 
     <h1>We are recruiting!</h1>
     <p>
@@ -25,7 +26,10 @@ layout: frontpage
     <p>
     <a href=https://jobs.kcl.ac.uk/gb/en/job/060969/Research-Software-Engineer target="_blank">Click here for details</a>
     </p>
+    </div>
+
     <br>
+
 
     <hr>
     
