bug fix in registration form

--- a/leuven2023_registration.html
+++ b/leuven2023_registration.html
@@ -44,7 +44,7 @@ permalink: /workshop2023/registration
     </select>
   </p>
 
-  <p><label for="comm">Do you have any comments or requests?</label> <textarea id="comm" name="Comments" rows=4 cols=50></p>
+  <p><label for="comm">Do you have any comments or requests?</label><br /> <textarea id="comm" name="Comments" rows=4 cols=50></textarea></p>
 
   <p><button type="submit">Register now!</button></p>
 </form>
