--- a/leuven2023_registration.html
+++ b/leuven2023_registration.html
@@ -8,9 +8,7 @@ permalink: /workshop2023/registration
         
 <h1>MRtrix Workshop Registration</h1>
 
-<p>THIS IS FOR TESTING ONLY - WE DO  NOT ACCEPT REGISTRATIONS YET!</p>
-
-<p>Please fill out the form below to sign up for the MRtrix Workshop 2023 in Leuven, Belgium. After submitting the form, you will be redirected to the payment website. If you encounter any issues, please contact us at <a href="mailto:workshop@mrtrix.org">workshop@mrtrix.org</a></p>
+<p>Please fill out the form below to sign up for the MRtrix Workshop 2023 in Leuven, Belgium. After submitting the form, you will be redirected to the payment website. We will confirm your registration by email within one week. If you encounter any issues, please contact us at <a href="mailto:workshop@mrtrix.org">workshop@mrtrix.org</a></p>
 
 <form 
   method="POST" 
@@ -29,23 +27,23 @@ permalink: /workshop2023/registration
   <p>
     <label for="rate">Rate:</label> * 
     <select id="rate" name="Rate" required>
-      <option value="Student">Student</option>
-      <option value="Post-doc">Post-doc</option>
-      <option value="Industry">Industry</option>
+      <option value="Student">Student (&euro; 500)</option>
+      <option value="Post-doc">Post-doc (&euro; 800)</option>
+      <option value="Industry">Industry (&euro; 1200)</option>
     </select>
   </p>
 
   <p>
     <label for="pay">Preferred payment method:</label> * 
-    <select id="pay" name="Invoice" required>
-      <option value="No">Credit/debit card</option>
-      <option value="Yes">Invoice</option>
+    <select id="pay" name="Payment" required>
+      <option value="Card">Credit/debit card</option>
+      <option value="Invoice">Invoice</option>
     </select><br />
   </p>
   
   <p>
     <input id="ads" name="ADS" type="checkbox" value="Yes">
-    <label for="ads">I am a PhD student at the KU Leuven Arenberg Doctoral School (Science &amp; Technology) and would like to apply for a registration waiver.</label>
+    <label for="ads">I am a PhD student at the KU Leuven Arenberg Doctoral School (Science &amp; Technology).</label>
   </p>
 
   <p>
@@ -57,7 +55,7 @@ permalink: /workshop2023/registration
 
   <p><label for="comm">Do you have any comments or requests?</label><br /> <textarea id="comm" name="Comments" rows=4 cols=50></textarea></p>
 
-  <p>* <input id="terms" name="Terms" type="checkbox" required> <label for="terms">I accept the <a href="https://www.kuleuven.be/onderwijs/levenslangleren/permanentevorming/Docs/generalterms">General Terms and Conditions for Continuing Education at KU Leuven</a>.</label></p>
+  <p>* <input id="terms" name="Terms" type="checkbox" value="Accept" required> <label for="terms">I accept the <a href="https://www.kuleuven.be/onderwijs/levenslangleren/permanentevorming/Docs/generalterms">General Terms and Conditions for Continuing Education at KU Leuven</a>.</label></p>
 
   <p><button type="submit">Register now!</button></p>
 </form>
@@ -81,20 +79,17 @@ window.addEventListener("load", function() {
       if (res.result === 'success') {
         var outputmessage = '<p>Your registration has been recorded successfully. Nice one!</p>';
         // data processing
-        var amount = 800;
+        var amount = (data.get("Rate") === "Industry") ? 1200 : 800;
         if (data.get("Rate") === "Student") {
           amount = 500;
           outputmessage += '<p>Please email a student verification letter to <a href="mailto:workshop@mrtrix.org">workshop@mrtrix.org</a></p>';
         }
-        if (data.get("Rate") === "Industry") {
-          amount = 1000; 
-        }
         var message = "Registration " + data.get("First Name") + " " + data.get("Last Name");
         var link = encodeURI("http://www.kuleuven.be/sapredir/onlinebetaling?taal=en-US&ges_mededeling=400/0023/82805&amount=" + amount + "&omschrijving=" + message);
         if (data.get("ADS")) {
-          outputmessage += '<p>We have limited number waivers available for ADS students. You do not need to pay the registration fee until we have processed your application.</p>';
+          outputmessage += '<p>We have limited number of waivers available for ADS students. You do not need to pay the registration fee until we have processed your application.</p>';
         } else {
-          if (data.get("Invoice") === "Yes") {
+          if (data.get("Payment") === "Invoice") {
             outputmessage += '<p>We will send you the invoice, including payment instructions, by email.</p>'
           } else {
             outputmessage += '<p>Please proceed to the following page to pay the registration fee (&euro;' + amount + '): <a href="' + link + '">Payment Link.</a></p>'; 
