Small fix in registration form

--- a/leuven2023_registration.html
+++ b/leuven2023_registration.html
@@ -22,7 +22,7 @@ permalink: /workshop2023/registration
   <p><label for="aff">Affiliation:</label> * <input id="aff" name="Affiliation" type="text" size=50 required></p>
   <p><label for="address">Address:</label> * <input id="address" name="Address" type="text" size=50 required></p>
   <p><label for="city">City:</label> * <input id="city" name="City" type="text" size=50 required></p>
-  <p><label for="country">Country:</label> * <input id="country" name="County" type="text" required></p>
+  <p><label for="country">Country:</label> * <input id="country" name="Country" type="text" required></p>
 
   <p>
     <label for="rate">Rate:</label> * 
