workshop registration: rename post-doc to academic

--- a/leuven2023_registration.html
+++ b/leuven2023_registration.html
@@ -28,7 +28,7 @@ permalink: /workshop2023/registration
     <label for="rate">Rate:</label> * 
     <select id="rate" name="Rate" required>
       <option value="Student">Student (&euro; 500)</option>
-      <option value="Post-doc">Post-doc (&euro; 800)</option>
+      <option value="Post-doc">Academic (&euro; 800)</option>
       <option value="Industry">Industry (&euro; 1200)</option>
     </select>
   </p>
