--- a/leuven2023_registration.html
+++ b/leuven2023_registration.html
@@ -8,11 +8,9 @@ permalink: /workshop2023/registration
         
 <h1>MRtrix Workshop Registration</h1>
 
-<p><b><i>Registration is now fully booked!</i></b> You can fill out the form below to put your name on the <i>waiting list</i>.</p>
-
-<!--
 <p>Please fill out the form below to sign up for the MRtrix Workshop 2023 in Leuven, Belgium. After submitting the form, you will be redirected to the payment website. We will confirm your registration by email within one week. If you encounter any issues, please contact us at <a href="mailto:workshop@mrtrix.org">workshop@mrtrix.org</a></p>
--->
+
+<p><b><i>We have reached the maximum number of participants.</i></b> You can fill out the form below to put your name on the <i>waiting list</i>; we will let you know if we have availability.</p>
 
 <form 
   method="POST" 
