--- a/workshop.html
+++ b/workshop.html
@@ -1,4 +1,4 @@
 ---
-redirect: https://www.mrtrix.org/2024/01/20/next-mrtrix3-workshop-will-be-held-in-taiwan-1-4-july-2024/
+redirect: https://community.mrtrix.org/t/mrtrix3-workshop-to-be-held-in-brisbane-australia-in-july-2025/8185
 layout: redirect
 ---
