use mrtrix.org URL for link to workshop

--- a/workshop.html
+++ b/workshop.html
@@ -1,4 +1,4 @@
 ---
-redirect: https://community.mrtrix.org/t/mrtrix3-workshop-to-be-held-in-brisbane-australia-in-july-2025/8185
+redirect: https://www.mrtrix.org/2025/02/03/mrtrix3-workshop-to-be-held-in-brisbane-australia-in-july-2025/
 layout: redirect
 ---
